Portafolio para entrega. Listo para comenzar a iterar

--- a/src/style.css
+++ b/src/style.css
@@ -5,9 +5,11 @@
 }
 
 body {
-    background-image: url(../img/bg.jpg);
-    background-repeat: no-repeat;
+    background-image: url('./img/bg.jpg');
+    background-repeat: repeat;
+    background-attachment: fixed;
     height: 100%;
+    width: 100%;
 }
 
 .headerBar {
@@ -19,11 +21,11 @@ body {
 
 .title {
     display: flex;
-    /* flex-direction: row; */
+    flex-direction: row;
     justify-content: center;
     font-family: 'Amatic SC';
     /* margin: 3vh; */
-    color: #3A6AB2;
+    color: #6DAAC1;
     font-size: 3.5rem;
 }
 
@@ -31,11 +33,10 @@ body {
     display: flex;
     flex-direction: row;
     justify-content: center;
-    background-color: #fff;
     margin: 10vh;
-    /* position: absolute; */
     width: 80vw;
     height: auto;
+    padding: 2vw;
     background: rgba(255, 255, 255, 0.3);
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     backdrop-filter: blur(10px);
@@ -43,29 +44,36 @@ body {
 }
 
 .text {
-    width: 100vw;
-    padding: 2rem;
+    /* width: 100vw; */
+    padding: 1rem;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
 }
 
 .hello {
-    font-size: 6vh;
+    display: inline-flex;
+    font-size: 4rem;
     font-family: 'Amatic SC';
     color: #fff;
     text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
 
 .present {
+    display: inline-flex;
     color: #fff;
-    font-size: 4.4vh;
+    font-size: 3.2rem;
     font-family: 'Oswald';
     text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
 
-.myMoji {
-    display: flex;
-}
+
+/* .myMoji {
+    height: 50vh;
+} */
 
 .emoji {
+    display: flex;
     height: 40vh;
     /* margin-top: -8vh; */
 }
@@ -85,8 +93,10 @@ body {
 
 .box-about,
 .habilities-box {
+    display: flex;
     width: 80vw;
     height: 10vh;
+    align-items: center;
     background: rgba(255, 255, 255, 0.65);
     box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.25);
     backdrop-filter: blur(10px);
@@ -96,7 +106,7 @@ body {
 .lil-title {
     font-size: 2rem;
     font-family: 'Oswald';
-    color: #3A6AB2;
+    color: #6DAAC1;
     text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     margin-left: 2vw;
     margin-top: 1vh;
@@ -111,6 +121,11 @@ body {
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     backdrop-filter: blur(10px);
     border-radius: 0px 0px 10px 10px;
+}
+
+.linked {
+    text-decoration: none;
+    color: #6DAAC1;
 }
 
 .innertxt {
@@ -134,8 +149,9 @@ body {
     font-family: 'Amatic SC';
     font-weight: bold;
     font-size: 2rem;
-    color: #FFF;
+    color: #6DAAC1;
     text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    flex-wrap: wrap;
 }
 
 .list {
@@ -144,4 +160,84 @@ body {
     padding: 1rem;
     border-radius: 8px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+.projects {
+    display: flex;
+    /* justify-content: center; */
+    width: 80vw;
+    height: 10vh;
+    align-items: center;
+    background: rgba(255, 255, 255, 0.65);
+    box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.25);
+    backdrop-filter: blur(10px);
+    border-radius: 8px;
+    margin-top: 8vh;
+}
+
+.projects2 {
+    display: flex;
+    width: 80vw;
+    align-items: center;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    background: rgba(255, 255, 255, 0.65);
+    box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.25);
+    backdrop-filter: blur(10px);
+    border-radius: 8px;
+    margin-top: 3vh;
+}
+
+.mygh {
+    display: flex;
+    width: 30vw;
+    border-radius: 8px;
+    margin: 5%;
+}
+
+.myFooter {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    background-color: #fff;
+    width: 100vw;
+    height: auto;
+}
+
+.contact-txt1 {
+    display: flex;
+}
+
+.contact-txt {
+    font-family: 'Amatic SC';
+    font-size: 3rem;
+    margin-top: 2vh;
+    margin-left: 6vw;
+    color: #6DAAC1;
+}
+
+.contact {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-evenly;
+    width: 80vw;
+    height: auto;
+    margin: 2vw 0vw 2vw 0vw;
+}
+
+.icon-link {
+    display: flex;
+    flex-direction: row;
+    font-family: 'Oswald';
+    text-decoration: none;
+    color: #383836;
+    font-size: 1.5rem;
+}
+
+.icons {
+    width: 5vh;
+    margin: 0vh 1vw 0vh 1vw;
 }
