--- a/src/style.css
+++ b/src/style.css
@@ -128,6 +128,10 @@ body {
     color: #6DAAC1;
 }
 
+.linked:hover {
+    color: #fff;
+}
+
 .innertxt {
     align-items: center;
     margin: 2vw;
@@ -160,6 +164,12 @@ body {
     padding: 1rem;
     border-radius: 8px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+.list:hover {
+    /* background-image: radial-gradient(circle, #6daac1, #67b0c5, #60b5c8, #5abbc9, #55c0ca); */
+    background-image: radial-gradient(circle, #6daac1, #68aec4, #63b3c6, #5fb7c8, #5abbc9, #5abbc9, #5abbc9, #5abbc9, #5fb7c8, #63b3c6, #68aec4, #6daac1);
+    color: #fff;
 }
 
 .projects {
@@ -215,6 +225,7 @@ body {
     margin-top: 2vh;
     margin-left: 6vw;
     color: #6DAAC1;
+    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
 .contact {
