--- a/src/style.css
+++ b/src/style.css
@@ -27,6 +27,7 @@ body {
     /* margin: 3vh; */
     color: #6DAAC1;
     font-size: 3.5rem;
+    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
 .myName {
@@ -52,7 +53,7 @@ body {
 }
 
 .hello {
-    display: inline-flex;
+    display: flex;
     font-size: 4rem;
     font-family: 'Amatic SC';
     color: #fff;
@@ -201,7 +202,7 @@ body {
 
 .mygh {
     display: flex;
-    width: 30vw;
+    width: 25vw;
     border-radius: 8px;
     margin: 5%;
 }
@@ -251,4 +252,51 @@ body {
 .icons {
     width: 5vh;
     margin: 0vh 1vw 0vh 1vw;
+}
+
+
+/* Smartphones (portrait) */
+
+@media only screen and (min-device-width: 320px) and (max-device-width: 480px) {
+    .root {
+        display: flex;
+        justify-content: center;
+    }
+    .title {
+        margin-left: 3vh;
+        font-size: 3rem;
+    }
+    .myName {
+        flex-direction: column;
+        width: 80vw;
+        margin: 5%;
+    }
+    .text {
+        width: 80vw;
+        display: flex;
+        justify-content: center;
+        /* padding: 2rem; */
+    }
+    .hello {
+        font-size: 2.5rem;
+        padding: 1rem 2rem 0rem 2rem;
+    }
+    .present {
+        font-size: 2rem;
+        padding: 1rem 2rem 0rem 2rem;
+    }
+    .emoji {
+        height: 30vh;
+        width: 65vw;
+    }
+    .blur-bg {
+        margin: 5%;
+    }
+    .list {
+        margin: 1.2rem;
+    }
+    .mygh {
+        width: 55vw;
+        margin: 5%;
+    }
 }
