--- a/src/style.css
+++ b/src/style.css
@@ -6,17 +6,22 @@
 
 body {
     background-image: url('./img/bg.jpg');
-    background-repeat: repeat;
+    /* background-repeat: repeat; */
     background-attachment: fixed;
-    height: 100%;
-    width: 100%;
+    /* height: 100vh; */
+    /* width: 90px; */
 }
 
 .headerBar {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: center;
     background-color: #fff;
     width: 100vw;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    /* position: fixed; */
+    position: fixed;
+    z-index: 2;
 }
 
 .title {
@@ -29,12 +34,20 @@ body {
     font-size: 3.5rem;
     text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
+.bodyCont{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    /* width: 30vw; */
+}
 
 .myName {
-    display: flex;
+    /* display: flex;
     flex-direction: row;
-    justify-content: center;
-    margin: 10vh;
+    justify-content: center; */
+    margin-top: 25vh;
+    margin-left: 8vw;
+    margin-right: 5vw;
     width: 80vw;
     height: auto;
     padding: 2vw;
@@ -46,7 +59,7 @@ body {
 
 .text {
     /* width: 100vw; */
-    padding: 1rem;
+    padding: 0.5rem 1rem 0.5rem 2rem ;
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
@@ -54,6 +67,7 @@ body {
 
 .hello {
     display: flex;
+    /* justify-content: center; */
     font-size: 4rem;
     font-family: 'Amatic SC';
     color: #fff;
@@ -61,21 +75,27 @@ body {
 }
 
 .present {
-    display: inline-flex;
+    display: flex;
     color: #fff;
     font-size: 3.2rem;
     font-family: 'Oswald';
     text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    width: 80%;
 }
 
 
 /* .myMoji {
     height: 50vh;
 } */
-
-.emoji {
+.myface{
     display: flex;
-    height: 40vh;
+    position: absolute;
+    bottom: -18%;
+    left: 65%;
+
+}
+.emoji {
+    height: 70vh;
     /* margin-top: -8vh; */
 }
 
@@ -83,7 +103,10 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    margin: 10vh;
+    margin-top: 10vh;
+    margin-left: 15vh;
+    margin-right: 8vh;
+    margin-bottom: 10vh;
     width: 80vw;
     height: auto;
     padding: 2vw;
@@ -258,39 +281,61 @@ body {
 /* Smartphones (portrait) */
 
 @media only screen and (min-device-width: 320px) and (max-device-width: 480px) {
-    .root {
+    /* .root {
         display: flex;
         justify-content: center;
+    } */
+    body{
+        width: 100%;
+    }
+    .headerBar{
+        width: 100%;
     }
     .title {
-        margin-left: 3vh;
-        font-size: 3rem;
+        /* margin-left: 3vh; */
+        font-size: 1.8rem;
     }
     .myName {
         flex-direction: column;
         width: 80vw;
-        margin: 5%;
+        margin: 13% 0% 0% 10%;
+        padding-top: 0%;
+        padding-left: 0%;
+        padding-right: 0%;
     }
     .text {
         width: 80vw;
+        height: 40vh;
         display: flex;
         justify-content: center;
+        padding-top: 0rem;
+        padding-bottom: 4rem;
         /* padding: 2rem; */
     }
     .hello {
         font-size: 2.5rem;
-        padding: 1rem 2rem 0rem 2rem;
+        padding: 0rem 1.2rem 0.5rem 0rem;
     }
     .present {
-        font-size: 2rem;
-        padding: 1rem 2rem 0rem 2rem;
+        font-size: 1.8rem;
+        padding-top: -90%;
+        padding: 0.5rem 2.5rem 0rem 0rem;
+    }
+    .myface{
+        bottom: -8%;
+        left: 20%;
+    
     }
     .emoji {
-        height: 30vh;
-        width: 65vw;
+        display: flex;
+        justify-content: center;
+        height: 22vh;
+        /* width: 55vw; */
     }
     .blur-bg {
-        margin: 5%;
+        margin-left: 2rem;
+        margin-top: 2rem;
+        margin-bottom: 2rem;
     }
     .list {
         margin: 1.2rem;
@@ -298,5 +343,15 @@ body {
     .mygh {
         width: 55vw;
         margin: 5%;
+    }
+    .myFooter{
+        /* position: fixed; */
+        bottom: 0px;
+        width: 100vw;
+        /* height: auto; */
+        z-index: 2;
+    }
+    .contact-txt{
+        font-size: 1.5rem;
     }
 }
